<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maverick HUD</string>
    <string name="settings_title">Maverick HUD</string>
    <string name="settings_glasses_section">Glasses</string>
    <string name="settings_pair">Pair Maverick</string>
    <string name="settings_unpair">Unpair</string>
    <string name="settings_units_metric">Metric (km/h, km)</string>
    <string name="settings_units_imperial">Imperial (mph, mi)</string>
    <string name="settings_page_mode_auto">Auto-cycle pages</string>
    <string name="settings_page_mode_follow">Follow Karoo page</string>
    <string name="settings_page_mode_manual">Manual (glasses button)</string>
    <string name="settings_status_connected">Connected: %1$s</string>
    <string name="settings_status_disconnected">Not connected</string>
    <string name="extension_disconnected_alert">Maverick glasses disconnected</string>
    <string name="glasses_field">Glasses</string>
    <string name="glasses_field_desc">Glasses battery, signal &amp; brightness; tap to cycle brightness or reconnect</string>
    <string name="field_status_connected">Connected</string>
    <string name="field_status_disconnected">Disconnected\nTap to pair</string>
    <string name="pair_action">Pair glasses</string>
    <string name="configure_action">Configure HUD</string>
    <string name="glasses_battery_field">Maverick Battery</string>
    <string name="glasses_battery_desc">Everysight Maverick glasses battery level</string>
</resources>
